tests/ui/methods/method-not-found-on-iterator.stderr
error[E0599]: no method named `iter` found for struct `Iterate<T, F>` in the current scope
  --> $DIR/method-not-found-on-iterator.rs:30:24
   |
LL | pub struct Iterate<T, F> {
   | ------------------------ method `iter` not found for this struct
...
LL |     println!("{:?}", a.iter().take(10).collect::<Vec<usize>>());
   |                        ^^^^ method not found in `Iterate<{integer}, {closure@$DIR/method-not-found-on-iterator.rs:29:24: 29:27}>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
